--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
   "singleQuote": true,
   "semi": false,
-  "trailingComma": "all",
-  "tabWidth": 2,
-  "printWidth": 80,
-  "semicolons": false
+  "trailingComma": "none",
+  "arrowParens": "avoid"
 }
